src/objects/Accounting_PaymentsForInvoice__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>PaymentRec__r.payment_method__r.account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_USD__c</fullName>
        <formula>PaymentRec__r.amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Admin__c</fullName>
        <formula>PaymentRec__r.payment_method__r.billing_admin__r.web_user__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Admin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Created__c</fullName>
        <formula>PaymentRec__r.date_created__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Accounting_Invoice__c</referenceTo>
        <relationshipLabel>Accounting_PaymentsForInvoice</relationshipLabel>
        <relationshipName>Accounting_PaymentsForInvoice</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PaymentRec__c</fullName>
        <label>PaymentRec</label>
        <referenceTo>Accounting_Paymentrecord__c</referenceTo>
        <relationshipLabel>Accounting_PaymentsForInvoice</relationshipLabel>
        <relationshipName>Accounting_PaymentsForInvoice</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <formula>PaymentRec__r.payment_method__r.billing_admin__r.domain__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Server_Name__c</fullName>
        <label>Server Name</label>
        <picklist>
            <picklistValues>
                <fullName>CommCareHQ</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CommCareHq India</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stripe_Transaction_ID__c</fullName>
        <formula>PaymentRec__r.transaction_id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stripe Transaction ID</label>
        <type>Text</type>
    </fields>
    <label>Accounting_PaymentsForInvoice</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting_PaymentsForInvoice</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>